--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,11 +1,502 @@
-@import 'vars';
 @import 'fonts';
+@import 'vars';
 @import 'reset';
+@import 'vendor';
 @import 'global';
 
+.header {
+  padding: 45px 0 49px;
+
+  &__navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1140px;
+    width: 100%;
+  }
+
+  &__menu {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 500;
+    color: $text2;
+  }
+
+  &__item:not(:last-child) {
+    margin-right: 33px;
+  }
+
+  &__tools {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__tool:not(:last-child) {
+    margin-right: 20px;
+  }
+
+  &__ref {
+    display: block;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+  }
+
+  &__ref--search {
+    background-color: $mystic;
+    background-image: url('../images/header/search.svg');
+  }
+
+  &__ref--heart {
+    background-image: url('../images/header/heart.svg');
+  }
+
+  &__ref--cart {
+    background-image: url('../images/header/cart.svg');
+  }
+
+  &__ref--more {
+    background-color: $casper;
+    background-image: url('../images/header/more.svg');
+  }
+
+  &__box {
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    width: 178px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: $lightApricot;
+  }
+
+  &__box::before {
+    content: '';
+    position: absolute;
+    top: 9px;
+    left: 50%;
+    width: 1px;
+    height: 32px;
+    background-color: $white;
+  }
+
+  &__quantity {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    min-width: 16px;
+    height: 16px;
+    padding: 0 3px;
+    border-radius: 8px;
+    font-size: 10px;
+    line-height: 16px;
+    text-align: center;
+    background-color: $white;
+  }
+}
+
+.banner {
+  &__slide {
+    padding: 0 17%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    min-height: 820px;
+  }
+
+  .slick-dots {
+    position: absolute;
+    display: flex;
+    left: 50%;
+    bottom: 45px;
+    transform: translateX(-50%);
+  }
+
+  .slick-dots li:not(:last-child) {
+    margin-right: 12px;
+  }
+
+  .slick-dots button {
+    height: 29px;
+    min-width: 29px;
+    border-radius: 50%;
+    font-size: 11px;
+    color: $blueDianne;
+    font-weight: 500;
+    background-color: $white;
+    opacity: 0.3;
+    transition: opacity 0.3s ease;
+  }
+
+  .slick-dots button:hover,
+  .slick-active button {
+    opacity: 1;
+  }
+
+  &__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 420px;
+    padding-bottom: 68px;
+  }
+
+  &__title {
+    max-width: 420px;
+    margin-bottom: 25px;
+    font-size: 72px;
+    line-height: 1;
+    font-weight: 500;
+  }
+
+  &__descr {
+    max-width: 370px;
+    margin-bottom: 35px;
+    font-size: 18px;
+    line-height: 1.7;
+    color: $text2;
+  }
+
+  &__link {
+    position: relative;
+    padding: 18px 100px 12px 23px;
+    align-self: flex-start;
+    font-weight: 500;
+    color: $white;
+    background-color: $casper;
+  }
+
+  &__link::after {
+    content: '';
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 22px;
+    height: 9px;
+    background-image: url('../images/home-page/banner/arrow-right.svg');
+  }
+
+  &__img-box {
+    display: flex;
+    align-items: center;
+    max-width: 640px;
+    object-fit: scale-down;
+  }
+}
+
+.features {
+
+  &__list {
+    display: flex;
+    justify-content: space-around;
+    @extend %DMS-700;
+    background-color: $provincialPink;
+  }
+
+  &__item {
+    max-width: 590px;
+    width: 100%;
+  }
+
+  &__item:not(:first-child) {
+    border-left: 1px solid #e8e4df;
+  }
+
+  &__box {
+    max-width: 335px;
+    min-height: 170px;
+    padding: 40px 15px 15px 100px;
+    margin: 0 auto
+  }
+
+  &__title {
+    position: relative;
+    color: $text3;
+  }
+
+  &__title::before {
+    content: '';
+    position: absolute;
+    left: -80px;
+    top: 5px;
+    width: 55px;
+    height: 55px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+
+  &__title--support::before {
+    background-image: url('../images/home-page/features/support.svg');
+  }
+
+  &__title--delivery::before {
+    background-image: url('../images/home-page/features/delivery.svg');
+  }
+
+  &__title--payment::before {
+    background-image: url('../images/home-page/features/payment.svg');
+  }
+
+  &__descr {
+    font-weight: 400;
+    color: $text4;
+  }
+}
+
+.products {
+  padding: 54px 0 78px;
+
+  &__title {
+    margin-bottom: 10px;
+  }
+
+  &__filter {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 74px;
+  }
+
+  .mixitup-control-active {
+    color: $text5;
+  }
+
+  &__elem:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  &__btn {
+    @extend %DMS-700;
+    color: $text6;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 40px;
+  }
+
+  &__item {
+    flex-basis: 270px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-end;
+    position: relative;
+    min-height: 380px;
+    border-radius: 10px;
+    background-color: $white;
+    box-shadow: 0px 6px 47px 3px rgba(#252525, 0.05);
+  }
+
+  &__img-wrap {
+    margin: auto;
+  }
+
+  &__text-wrap {
+    height: 90px;
+    width: 100%;
+  }
+
+  &__name,
+  &__price {
+    display: block;
+    text-align: center;
+    @extend %DMS-500;
+  }
+
+  &__price {
+    color: $casper;
+    font-weight: 700;
+  }
+
+  &__tools {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 155px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  &__tool:not(:last-child) {
+    margin-right: 15px;
+  }
+
+  &__item:hover {
+    .products__tools {
+      opacity: 1;
+    }
+  }
+
+  &__toggle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-color: $white;
+    transition: background-color 0.3s ease;
+  }
+
+  &__search-svg,
+  &__cart-svg,
+  &__heart-svg {
+    fill: #a3bbc8;
+    fill-rule: evenodd;
+    transition: fill 0.3s ease;
+  }
+
+  &__toggle:hover {
+    background-color: $casper;
+
+    .products__search-svg,
+    .products__cart-svg,
+    .products__heart-svg {
+      fill: $white;
+    }
+  }
+}
 
 
 
+.footer {
+  font-size: 14px;
+  color: $boulder;
+
+  &__cols {
+    display: flex;
+    justify-content: space-between;
+    padding: 77px 0 60px;
+    border-bottom: 1px solid #dae4e9;
+    line-height: 1.7;
+  }
+
+  &__col {
+    max-width: 200px;
+    width: 100%;
+  }
+
+  &__col:last-child {
+    max-width: 270px;
+  }
+
+  &__items {
+    padding-top: 15px;
+  }
+
+  &__item {
+    margin-bottom: 9px;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    @extend %DMS-700;
+    font-size: 16px;
+    line-height: 1.3;
+    color: $portGore;
+    text-transform: uppercase;
+  }
+
+  &__copy {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 90px;
+  }
+
+  &__nav-list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__nav-item {
+    position: relative;
+  }
+
+  &__nav-item:not(:last-child) {
+    position: relative;
+    margin-right: 30px;
+  }
+
+  &__nav-item:not(:first-child)::before {
+    content: '|';
+    position: absolute;
+    left: -15px;
+  }
+}
+
+.contacts {
+  &__items {
+    font-style: normal;
+  }
+
+  &__item {
+    margin-bottom: 11px;
+  }
+}
+
+.form {
+
+  &__input,
+  &__btn {
+    @extend %DMS-400;
+    min-height: 40px;
+    height: 100%;
+  }
+
+  &__input {
+    float: left;
+    max-width: 170px;
+    width: 100%;
+    padding: 8px 15px 9px;
+    border: none;
+    font-size: 12px;
+    color: $text8;
+    background-color: $provincialPink;
+    outline-color: $cello;
+  }
+
+  &__input:focus,
+  &__btn:focus {
+    outline-style: solid;
+  }
+
+  &__btn {
+    max-width: 100px;
+    width: 100%;
+    color: $white;
+    background-color: $casper;
+    padding: 8px 5px 9px;
+  }
+
+  &__label {
+    display: block;
+    margin-bottom: 34px;
+  }
+}
 
 
 
