--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -14,8 +14,13 @@ ol {
 }
 
 a {
+  display: inline-block;
   text-decoration: none;
   color: inherit;
+}
+
+input {
+  border: none;
 }
 
 button {
