--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -14,43 +14,35 @@ $boulder: #7b7b7b;
 $mystic: #edf1f4;
 $lightApricot: #fcd7b6;
 $provincialPink: #fef7f0;
-
-$text: $blueDianne;
-$text2: $blueBayoux;
-$text3: $tundora;
-$text4: $scorpion;
-$text5: $сodGray;
-$text6: $gray;
-$text7: $portGore;
-$text8: $cello;
-$title: $сodGray;
+$halfSpanishWhite: #feefe2;
+$alabaster: #f8f8f8;
 
 %Rubik-400 {
-  font-family: Rubik, sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 400;
 }
 
 %Rubik-500 {
-  font-family: Rubik, sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 500;
 }
 
 %DMS-400 {
-  font-family: DMSans, sans-serif;
+  font-family: 'DMSans', sans-serif;
   font-weight: 400;
 }
 
 %DMS-500 {
-  font-family: DMSans, sans-serif;
+  font-family: 'DMSans', sans-serif;
   font-weight: 500;
 }
 
 %DMS-700 {
-  font-family: DMSans, sans-serif;
+  font-family: 'DMSans', sans-serif;
   font-weight: 700;
 }
 
 %Poppins-700 {
-  font-family: Poppins, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 700;
 }
