--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,64 +1,58 @@
 @font-face {
-  font-family: Rubik;
+  font-family: 'Rubik';
   src: local('Rubik'),
-    url('../fonts/Rubik-Regular.woff2') format('woff2'),
-    url('../fonts/Rubik-Regular.woff') format('woff'),
-    url('../fonts/Rubik-Regular.ttf') format('truetype');
+    url('../fonts/Rubik/Rubik-Regular.woff2') format('woff2'),
+    url('../fonts/Rubik/Rubik-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: Rubik;
+  font-family: 'Rubik';
   src: local('Rubik'),
-    url('../fonts/Rubik-Medium.woff2') format('woff2'),
-    url('../fonts/Rubik-Medium.woff') format('woff'),
-    url('../fonts/Rubik-Medium.ttf') format('truetype');
+    url('../fonts/Rubik/Rubik-Medium.woff2') format('woff2'),
+    url('../fonts/Rubik/Rubik-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: DMSans;
+  font-family: 'DMSans';
   src: local('DMSans'),
-    url('../fonts/DMSans-Regular.woff2') format('woff2'),
-    url('../fonts/DMSans-Regular.woff') format('woff'),
-    url('../fonts/DMSans-Regular.ttf') format('truetype');
+    url('../fonts/DMS/DMSans-Regular.woff2') format('woff2'),
+    url('../fonts/DMS/DMSans-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: DMSans;
+  font-family: 'DMSans';
   src: local('DMSans'),
-    url('../fonts/DMSans-Medium.woff2') format('woff2'),
-    url('../fonts/DMSans-Medium.woff') format('woff'),
-    url('../fonts/DMSans-Medium.ttf') format('truetype');
+    url('../fonts/DMS/DMSans-Medium.woff2') format('woff2'),
+    url('../fonts/DMS/DMSans-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: DMSans;
+  font-family: 'DMSans';
   src: local('DMSans'),
-    url('../fonts/DMSans-Bold.woff2') format('woff2'),
-    url('../fonts/DMSans-Bold.woff') format('woff'),
-    url('../fonts/DMSans-Bold.ttf') format('truetype');
+    url('../fonts/DMS/DMSans-Bold.woff2') format('woff2'),
+    url('../fonts/DMS/DMSans-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: Poppins;
+  font-family: 'Poppins';
   src: local('Poppins'),
-    url('../fonts/Poppins-Bold.woff2') format('woff2'),
-    url('../fonts/Poppins-Bold.woff') format('woff'),
-    url('../fonts/Poppins-Bold.ttf') format('truetype');
+    url('../fonts/Poppins/Poppins-Bold.woff2') format('woff2'),
+    url('../fonts/Poppins/Poppins-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
