--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -2,19 +2,25 @@ body {
   @extend %Rubik-400;
   font-size: 16px;
   line-height: 1.9;
-  color: $text;
+  color: $blueDianne;
   background-color: $white;
+  scroll-behavior: smooth;
 }
 
-.container,
-.container-lg {
+button {
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+}
+
+.container {
   max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
-}
 
-.container-lg {
-  max-width: 1800px;
+  &--lg {
+    max-width: 1800px;
+  }
 }
 
 .sr-only {
@@ -30,14 +36,56 @@ body {
   overflow: hidden;
 }
 
+.line-clamp--1str,
+.products__name {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp--2str,
+.banner__title,
+.banner__text p,
+.features__title,
+.features__box p,
+.contacts__item,
+.footer__item,
+.bestseller__title,
+.bestseller__text p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp--4str,
+.news__box p {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 .title {
   @extend %DMS-700;
   font-size: 36px;
   text-align: center;
-  color: $title;
+  color: $сodGray;
+}
+
+.logo {
+  height: 50px;
+  width: 146px;
+
+  &__img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+  }
 }
 
 .logo--footer {
   display: block;
-  margin-bottom: 23px;
+  margin-bottom: 13px;
 }
