--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,51 +1,117 @@
 .header {
   padding: 45px 0 49px;
 
-  &__navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  @include width-823 {
+    padding: 10px 0 30px;
   }
 
-  &__wrapper {
-    // такие моменты уточняют у дизайнера же? тут и без врапера хорошо)
+  &__navigation,
+  &__menu,
+  &__tools {
     display: flex;
     justify-content: space-between;
+  }
+
+  &__navigation {
     align-items: center;
-    max-width: 1140px;
-    width: 100%;
+    flex-wrap: wrap;
+
+    @include width-568 {
+      justify-content: center;
+
+      .logo--header {
+        width: 100%;
+      }
+    }
   }
 
   &__menu {
-    display: flex;
-    justify-content: space-between;
     font-weight: 500;
     color: $blueBayoux;
+    flex-wrap: wrap;
+    transition: background-color 0.3s ease;
+
+    @include width-1200 {
+      justify-content: space-around;
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 1;
+      text-align: center;
+      font-size: 20px;
+      background-color: $white;
+    }
+
+    @include width-823 {
+      align-items: center;
+      flex-wrap: wrap;
+      position: absolute;
+      height: 100vh;
+      transform: translateY(-200%);
+      transition: transform 0.3s ease;
+      background-color: rgba($сodGray, 0.8);
+      overflow: auto;
+    }
   }
 
-  &__item:not(:last-child) {
-    margin-right: 33px;
+  &__item {
+
+    @include width-823 {
+      width: 100%;
+    }
+
+    &:not(:last-child) {
+      margin-right: 33px;
+
+      @include width-1200 {
+        margin-right: 0;
+      }
+    }
+
+    &--close {
+      display: none;
+    }
   }
+  &__close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 2;
+
+    svg {
+      width: 60px;
+      height: 60px;
+      fill: $white;
+    }
+  }
+
 
   &__link {
     border-bottom: 2px solid transparent;
-    transition:
-      border-color 0.2s ease,
-      color 0.2s ease;
+    transition: 0.2s ease;
+    transition-property: border-color color opacity;
+
+    @include width-823 {
+      display: block;
+      padding: 25px 5px;
+      color: $white;
+    }
 
     &:hover {
       border-color: inherit;
       color: $сodGray;
+
+      @include width-823 {
+        border-color: $white;
+        color: $white;
+      }
     }
   }
 
   &__tools {
-    display: flex;
-    justify-content: space-between;
-
-    &>:not(:last-child) {
-      margin-right: 20px;
-    }
+    max-width: 320px;
+    width: 100%;
   }
 
   &__tool {
@@ -55,42 +121,63 @@
     width: 50px;
     height: 50px;
     border-radius: 25px;
-    transition:
-      background-color 0.2s ease-in-out,
-      transform 0.1s ease;
+    transition: background-color 0.2s ease-in-out, transform 0.1s ease;
 
-    &--search {
+    svg {
+      width: 25px;
+      height: 100%;
+      fill: $blueDianne;
+      transition: fill 0.2s ease-out;
+
+      &.header-more {
+        fill: $white;
+      }
+    }
+
+    &--burger {
+      display: none;
+
+      @include width-823 {
+        display: block;
+      }
+    }
+
+    &--heart {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+
+    &--cart {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
+
+    &--burger,
+    &--search,
+    &--more:hover {
       background-color: $mystic;
     }
 
-    &--more {
+    &--burger:hover,
+    &--more,
+    &--search:hover {
       background-color: $casper;
     }
 
-    &:hover,
-    &:hover .header__icon {
-      background-color: transparent;
-      fill: $portGore;
+    &:hover {
+      svg {
+        fill: $white;
+      }
+
+      .header-more {
+        fill: $blueDianne;
+      }
     }
 
     &:active {
-      transform: scale(0.85);
-    }
-
-    &--heart:hover .header__icon--heart,
-    &--cart:hover .header__icon--cart {
-      fill: $white;
-    }
-  }
-
-  &__icon {
-    width: 25px;
-    height: 100%;
-    fill: $blueDianne;
-    transition: fill 0.2s ease-out;
-
-    &--more {
-      fill: $white;
+      svg {
+        transform: scale(0.85);
+      }
     }
   }
 
@@ -103,8 +190,12 @@
     border-radius: 25px;
     background-color: $lightApricot;
 
-    & .header__tool {
+    .header__tool {
       flex-grow: 1;
+
+      &:hover {
+        background-color: $casper;
+      }
     }
 
     &::before {
@@ -114,7 +205,12 @@
       left: 50%;
       width: 1px;
       height: 32px;
+      transform: translateX(-50%);
       background-color: $white;
+    }
+
+    @include width-823 {
+      width: 120px;
     }
   }
 
@@ -124,11 +220,47 @@
     top: 10px;
     right: 25px;
     height: 16px;
-    padding: 5px;
+    padding: 4px 5px;
     border-radius: 8px;
     font-size: 10px;
-    line-height: 0.8;
+    line-height: 1;
     text-align: center;
     background-color: $white;
+
+    @include width-823 {
+      right: 10px;
+    }
   }
+}
+
+.header-styles {
+  color: $white;
+  background-color: rgba($сodGray, 0.8);
+
+  .header__link {
+    color: $white;
+    line-height: 1.7;
+    opacity: 0.8;
+
+    &:hover {
+      color: $white;
+      border-color: $white;
+      opacity: 1;
+    }
+  }
+}
+
+.burger-active {
+  transform: translateY(0);
+  position: fixed;
+
+  .header__item--close {
+    display: block;
+  }
+}
+
+.tools-fixed {
+  position: fixed;
+  top: 10px;
+  z-index: 1;
 }
