--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,558 +1,21 @@
 @import 'reset';
-@import 'fonts';
 @import 'vars';
+@import 'functions';
+@import 'mixins';
+@import 'fonts';
 @import 'libs';
 @import 'keyframes';
 @import 'global';
+
 @import 'components/header';
-
-
-.banner {
-  &__slide {
-    position: relative;
-    padding: 0 300px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-    &::before {
-      content: '';
-      position: absolute;
-      width: 634px;
-      height: 634px;
-      top: 99px;
-      right: 173px;
-      background-image: url('../images/home-page/banner/banner-ellipse.png');
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center;
-    }
-  }
-
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .slick-dots {
-    position: absolute;
-    display: flex;
-    left: 50%;
-    bottom: 45px;
-    transform: translateX(-50%);
-  }
-
-  .slick-dots li:not(:last-child) {
-    margin-right: 12px;
-  }
-
-  .slick-dots button {
-    height: 29px;
-    min-width: 29px;
-    border-radius: 50%;
-    font-size: 11px;
-    color: $blueDianne;
-    font-weight: 500;
-    background-color: $white;
-    opacity: 0.3;
-    transition-property: opacity;
-  }
-
-  .slick-dots button:hover,
-  .slick-active button {
-    opacity: 1;
-  }
-
-  &__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 420px;
-    padding: 215px 0 280px;
-  }
-
-  &__title {
-    max-width: 420px;
-    margin-bottom: 25px;
-    font-size: 72px;
-    line-height: 1;
-    font-weight: 500;
-    text-transform: uppercase;
-  }
-
-  &__text p {
-    max-width: 370px;
-    margin-bottom: 35px;
-    font-size: 18px;
-    line-height: 1.7;
-    color: $blueBayoux;
-  }
-
-  &__link {
-    position: relative;
-    padding: 18px 100px 12px 23px;
-    align-self: flex-start;
-    font-weight: 500;
-    color: $white;
-    background-color: $casper;
-    transition:
-      background 0.2s ease-in-out,
-      color 0.2s ease-out;
-
-    &:hover {
-      background:
-        linear-gradient(to right,
-          rgba(#f9f9f9, 1) 50%,
-          rgba(#f9f9f9, 0) 100%);
-      color: $blueDianne;
-
-      .banner__arrow {
-        fill: $blueDianne;
-      }
-    }
-
-    &:active {
-      background-color: $white;
-    }
-  }
-
-  &__arrow {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 22px;
-    height: 9px;
-    fill: $white;
-  }
-
-  &__box {
-    display: flex;
-    align-items: center;
-    max-width: 640px;
-    max-height: 640px;
-    padding: 112px 0 118px;
-    overflow: hidden;
-  }
-
-  &__image {
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-  }
-}
-
-.features {
-  &__list {
-    display: flex;
-    justify-content: space-around;
-    @extend %DMS-700;
-    background-color: $provincialPink;
-  }
-
-  &__item {
-    max-width: 590px;
-    width: 100%;
-
-    &:not(:first-child) {
-      border-left: 1px solid #e8e4df;
-    }
-  }
-
-  &__box {
-    position: relative;
-    max-width: 335px;
-    min-height: 170px;
-    padding: 40px 15px 15px 100px;
-    margin: 0 auto
-  }
-
-  &__title {
-    color: $tundora;
-  }
-
-  &__box::before {
-    content: '';
-    position: absolute;
-    top: 45px;
-    left: 15px;
-    width: 55px;
-    height: 55px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-  }
-
-  &__box--support::before {
-    background-image: url('../images/home-page/banner/features/support.svg');
-  }
-
-  &__box--delivery::before {
-    background-image: url('../images/home-page/banner/features/delivery.svg');
-  }
-
-  &__box--payment::before {
-    background-image: url('../images/home-page/banner/features/payment.svg');
-  }
-
-  &__box p {
-    font-weight: 400;
-    color: $scorpion;
-  }
-}
-
-.products {
-  padding: 54px 0 30px;
-
-  &__title {
-    margin-bottom: 10px;
-  }
-
-  &__list {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 40px;
-  }
-
-  &__item {
-    flex-basis: 270px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-end;
-    position: relative;
-    min-height: 380px;
-    border-radius: 10px;
-    background-color: $white;
-    box-shadow: 0px 6px 47px 3px rgba(#252525, 0.05);
-  }
-
-  &__wrap {
-    margin: auto;
-    height: 210px;
-    width: 230px;
-  }
-
-  &__image {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-  }
-
-  &__text {
-    height: 90px;
-    width: 100%;
-  }
-
-  &__name,
-  &__price {
-    display: block;
-    max-height: 30px;
-    @extend %DMS-500;
-    text-align: center;
-    font-size: 16px;
-  }
-
-  &__link {
-    display: inline-block;
-    transition: transform 0.2s ease-out;
-
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
-
-  &__price {
-    color: $casper;
-    font-weight: 700;
-  }
-
-  &__item:hover {
-    .tools {
-      opacity: 1;
-    }
-  }
-}
-
-.tools {
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 155px;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-
-
-  &__tool:not(:last-child) {
-    margin-right: 15px;
-  }
-
-  &__toggle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    background-color: $white;
-    transition: background-color 0.3s ease;
-  }
-
-  &__search,
-  &__cart,
-  &__heart {
-    width: 22px;
-    height: 22px;
-    fill: #a3bbc8;
-    transition: fill 0.3s ease;
-  }
-
-  &__toggle:hover {
-    background-color: $casper;
-
-    .tools__search,
-    .tools__cart,
-    .tools__heart {
-      fill: $white;
-    }
-  }
-}
-
-.filter {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 74px;
-
-  .mixitup-control-active {
-    color: $сodGray;
-  }
-
-  &__elem:not(:last-child) {
-    margin-right: 30px;
-  }
-
-  &__btn {
-    @extend %DMS-700;
-    color: $gray;
-    border-bottom: 2px solid transparent;
-    transition:
-      color 0.2s ease-out,
-      border 0.2s ease-out;
-
-    &:hover:not(.mixitup-control-active) {
-      color: $сodGray;
-      border-color: $сodGray;
-    }
-  }
-}
-
-.bestseller {
-  display: flex;
-  justify-content: space-between;
-  gap: 30px;
-  padding-top: 182px;
-
-  &__item {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    max-width: 870px;
-    height: 390px;
-    width: 100%;
-    background-color: $halfSpanishWhite;
-  }
-
-  &__wrap {
-    position: relative;
-    top: -90px;
-    width: 250px;
-    height: 300px;
-  }
-
-  &__img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  &__title {
-    max-width: 255px;
-    margin-bottom: 15px;
-    @extend %DMS-700;
-    font-size: 26px;
-    line-height: 1.2;
-  }
-
-  &__text p {
-    max-width: 335px;
-    margin-bottom: 26px;
-  }
-
-  &__link {
-    position: relative;
-    max-width: 180px;
-    width: 100%;
-    padding: 14px 20px;
-    border: 1px solid rgba($blueBayoux, 0.4);
-    border-radius: 5px;
-    background-color: transparent;
-    transition:
-      background-color 0.2s ease,
-      box-shadow 0.2s ease;
-
-    &:hover {
-      background-color: $blueBayoux;
-      box-shadow: 1px -1px 4px 0px #221f1f;
-
-      .bestseller__sub {
-        color: $white;
-      }
-
-      .bestseller__arrow {
-        fill: $white;
-      }
-    }
-
-    &:active {
-      background-color: $casper;
-      transform: scale(0.98);
-    }
-  }
-
-  &__sub {
-    color: $blueBayoux;
-    @extend %Rubik-500;
-    font-size: 15px;
-  }
-
-  &__arrow {
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-    width: 22px;
-    height: 9px;
-    fill: $blueBayoux;
-  }
-}
-
-.new {
-  padding: 54px 0 100px;
-
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 35px;
-    column-gap: 30px;
-    margin-bottom: 120px;
-  }
-
-  &__item {
-    flex-basis: 370px;
-    min-height: 246px;
-    border-radius: 5px;
-    background-color: $alabaster;
-  }
-
-  &__link {
-    display: block;
-    position: relative;
-    height: 100%;
-    padding: 36px 0 30px 35px;
-  }
-
-  &__name {
-    max-width: 180px;
-    margin-bottom: 5px;
-    @extend %DMS-700;
-    font-size: 20px;
-    line-height: 1.3;
-    color: $сodGray;
-  }
-
-  &__wrap {
-    position: absolute;
-    left: 100px;
-    bottom: 30px;
-    width: 270px;
-    max-height: 178px;
-    overflow: hidden;
-  }
-
-  &__image {
-    margin: 0 20px 0 auto;
-  }
-
-  &__video {
-    display: block;
-    position: relative;
-    min-height: 500px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
-    &:hover {
-      .new__play {
-        fill: $blueBayoux;
-      }
-
-      &::after {
-        animation-play-state: running;
-      }
-
-      &::before {
-        background-color: $white;
-        opacity: 0.3;
-      }
-    }
-  }
-
-  &__video::before,
-  &__video::after,
-  &__play {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transition: fill 0.2s ease, background-color 0.2s ease-out;
-  }
-
-  &__video::before {
-    content: '';
-    display: block;
-    width: 98px;
-    height: 98px;
-    border-radius: 50%;
-    background-color: $casper;
-  }
-
-  &__video::after {
-    content: '';
-    display: block;
-    width: 127px;
-    height: 127px;
-    border-radius: 50%;
-    background-color: $casper;
-    opacity: 0.4;
-    animation: toWhite 1.5s ease-in-out infinite alternate paused 0s none;
-  }
-
-  &__play {
-    z-index: 1;
-    width: 22px;
-    height: 25px;
-    fill: $white;
-  }
-}
-
+@import 'components/banner';
+@import 'components/features';
+@import 'components/products';
+@import 'components/product-card';
+@import 'components/filter';
+@import 'components/bestseller';
+@import 'components/new';
+@import 'components/new-card';
 @import 'components/news';
 @import 'components/partners';
 @import 'components/footer';
-@import 'media';
